[gd_scene load_steps=2 format=3 uid="uid://c55yhj42fxduq"]

[ext_resource type="Script" path="res://scripts/vent.gd" id="1_4c6fv"]

[node name="Vent" type="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28.135, 0, 7)
script = ExtResource("1_4c6fv")

[node name="BobbieTimer" type="Timer" parent="."]

[node name="ResetTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="body_entered"]
[connection signal="body_exited" from="." to="." method="body_exited"]
[connection signal="timeout" from="BobbieTimer" to="." method="bobbie_timeout"]
[connection signal="timeout" from="ResetTimer" to="." method="_reset"]
